...
                app:layout_constraintEnd_toStartOf="@+id/description_camera_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_name_text"
                app:layout_constraintHorizontal_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton style="@style/rounded_button"
...
                android:hint="@string/item_comment_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_description_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_comment_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- item make & model -->
...
                android:hint="@string/item_make_head"
                app:layout_constraintEnd_toStartOf="@+id/half_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_comment_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_make_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
...
                android:hint="@string/item_model_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/half_guideline"
                app:layout_constraintTop_toTopOf="@+id/item_make_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_model_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- item serial no & value -->
...
                android:hint="@string/item_serial_head"
                app:layout_constraintEnd_toStartOf="@+id/serialno_camera_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_make_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_serial_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
...
                app:layout_constraintBottom_toBottomOf="@+id/item_serial_text"
                app:layout_constraintEnd_toStartOf="@+id/half_guideline"
                app:layout_constraintTop_toTopOf="@+id/item_serial_text" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_value_text"
                style="@style/item_edit_textinputlayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/item_value_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/half_guideline"
                app:layout_constraintTop_toTopOf="@+id/item_serial_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_value_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:theme="@style/item_edit_edittext" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/item_date_head"
                style="@style/gray_text"
                android:layout_marginTop="10dp"
                android:text="@string/item_date_head"
                app:layout_constraintEnd_toStartOf="@+id/item_date_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_serial_text" />

            <TextView
                android:id="@+id/item_date_text"
                style="@style/item_details_text"
                android:text="@string/item_date_placeholder"
                app:layout_constraintEnd_toStartOf="@+id/item_date_button"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_date_head" />
...
                app:layout_constraintTop_toTopOf="@+id/item_date_head" />

            <TextView
                android:id="@+id/edit_tags_text"
                style="@style/gray_text"
                android:text="Edit Tags"
                app:layout_constraintEnd_toEndOf="@+id/item_tags_button"
                app:layout_constraintEnd_toStartOf="@+id/item_tags_button"
                app:layout_constraintStart_toEndOf="@+id/half_guideline"
                app:layout_constraintTop_toTopOf="@+id/item_date_head"
                android:layout_marginLeft="6dp"
                app:layout_constraintHorizontal_weight="1"/>

...
                android:text="@string/item_tags_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_date_text" />

            <TextView
                android:id="@+id/item_tags_text"
                style="@style/item_details_text"
                android:text="@string/item_tags_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_tags_head" />

...
